Opdracht uit blok 1 onder  Week 3 - Javascript 101

--- a/B1W3L2 - VariabelenFuncties.html
+++ b/B1W3L2 - VariabelenFuncties.html
@@ -8,6 +8,9 @@
 
 <script>
 	
+	// Mijn naam is Vitja Nosa 
+	// Ik volg de opleiding Software Developer op het DaVinci College 
+
 	const threeQuestions = alert("Om verder te gaan moet u eerst 3 vragen beantwoorden") // laat eerste pop up zien
 	var firstname = prompt("Wat is uw voornaam?") // vraagt om je voornaam met pop up
 	var lastname = prompt("Wat is uw achternaam?") // vraagt om je achternaam met pop up
